force-app/main/default/objects/Apttus_Config2__HelpDoc__c/Apttus_Config2__HelpDoc__c.object-meta.xml
<CustomObject>
    <description>Object holds help documentation</description>
    <label>Help Doc</label>
    <nameField>
        <label>HelpDoc Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Help Docs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>