force-app/main/default/objects/Apttus_Config2__HelpDoc__c/fields/Apttus_Config2__Answer__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__Answer__c</fullName>
    <description>Answer help documentation</description>
    <inlineHelpText>Answer help documentation</inlineHelpText>
    <label>Answer</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>