force-app/main/default/objects/Apttus_Config2__HelpDoc__c/fields/Apttus_Config2__Question__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__Question__c</fullName>
    <description>Question help documentation</description>
    <inlineHelpText>Question help documentation</inlineHelpText>
    <label>Question</label>
    <length>1024</length>
    <type>LongTextArea</type>
</CustomField>