force-app/main/default/objects/Apttus_Config2__HelpDoc__c/fields/Apttus_Config2__QuestionSequence__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__QuestionSequence__c</fullName>
    <description>Question sequence for display ordering</description>
    <inlineHelpText>Question sequence for display ordering</inlineHelpText>
    <label>Question Sequence</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>