force-app/main/default/objects/Apttus_Config2__HelpDoc__c/fields/Apttus_Config2__TabSequence__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__TabSequence__c</fullName>
    <description>Tab display display sequence</description>
    <inlineHelpText>Tab display display sequence</inlineHelpText>
    <label>Tab Sequence</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>